tests/spec/compile-fail/010_move_parameter_requires_move.zn
// category: compile-fail
// profile: freestanding
// purpose: move parameters require explicit call-site move for named non-Copy arguments

module tests.fail.moveParameterRequiresMove;

struct Handle {
    id: U32,
}

impl Handle {
    destroy {}
}

fn consume(move handle: Handle) {}

fn main() {
    let handle = Handle { id: 1 };
    consume(handle); // expected-error: move parameter requires explicit `move` at call site
}
